--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.1",
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
