--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
