--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.18.0",
+    "bootstrap": "^4.5.3",
     "react": "^16.6.3",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.6.3",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.1.2",
