--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "mern",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "@material-ui/core": "^4.11.1",
