--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.6.3",
     "react-icons": "^4.1.0",
+    "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.1"
   },
