--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.5.3",
+    "moment": "^2.29.1",
     "react": "^16.6.3",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.6.3",
