--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "moment": "^2.29.1",
     "mongoose": "^5.3.16"
   }
 }
